# larcore

./: CMakeLists.txt  altCMakeLists.cmake
CoreUtils/: ServiceUtil.h
Geometry/: CMakeLists.txt  ChannelMap35Alg.cxx.sample  ChannelMap35Alg.h.sample  ChannelMapAPAAlg.cxx.sample  ChannelMapAPAAlg.h.sample  ChannelMapStandardAlg.cxx  CryostatGeo.cxx  DumpChannelMap_module.cc  ExptGeoHelperInterface.h  GNUmakefile  GeoObjectSorter.h  GeoObjectSorter35.cxx.sample  GeoObjectSorterAPA.cxx.sample  GeoObjectSorterStandard.cxx  GeoObjectSorterStandard.h  Geometry.h  GeometryCore.cxx  GeometryCore.h  StandardGeometryHelper.h  StandardGeometryHelper_service.cc  altCMakeLists.cmake  geometry.fcl  geometry_argoneut.fcl  geometry_bo.fcl  geometry_csu40L.fcl  geometry_icarus.fcl  geometry_jp250L.fcl  geometry_lariat.fcl  geometry_lariatfull.fcl  geometry_lariattest.fcl  geometry_lbne.fcl
Geometry/gdml/: CMakeLists.txt  altCMakeLists.cmake  csu40l.gdml  dune10kt36_nowires.gdml.sample  dune10kt_APAoutside_nowires.gdml.sample  dune10kt_nowires.gdml.sample  dune34kt_nowires.gdml.sample  dune4apa36deg_nowires.gdml.sample  dune4apa45deg_nowires.gdml.sample  dune_geo.C.sample  dunebulky_geo.C.sample  dunebulky_onecryo.C.sample  dunend_geo.C.sample  generate_35t.pl  generate_35t4apa.pl  generate_APAoutside.pl  generate_ICARUS.pl  generate_dune10kT.pl.sample  generate_dune34kt.pl.sample  generate_dune_gdml.pl.sample  generate_dunend_gdml.pl.sample  icarus.gdml  icarus_nowires.gdml  jp250L.gdml  lariatfull2_geo.C  lariatfull2_nowires.gdml  lariatfull3_geo.C  lariatfull4_nowires.gdml  lariatfull5.gdml  lariatfull5_nowires.gdml  lariatfull7_nowires.gdml  lariattest.gdml  lariattest_flat_pmt_w.gdml  lariattest_flat_pmt_w0.gdml  lariattest_geo.C  lbne_geo.C.sample  lbnebulky_onecryo.C.sample  lbnend_geo.C.sample  longbo.gdml  microboone-granite_geo.C
Geometry/gdml/GDMLSchema/: CMakeLists.txt
Geometry/gdml/bo/: bo-cryostat.gdml
Geometry/test/: GeometryTest_module.cc  debuggeo.csh  geotest.fcl
Modules/: larcoreConfig.cmake.in
SimpleTypesAndConstants/: CMakeLists.txt  GNUmakefile  PhysicalConstants.h  RawTypes.h  altCMakeLists.cmake  geo_types.h  readout_types.h
SimpleTypesAndConstants/test/: phyical_constants_test.cc
SummaryData/: CMakeLists.txt  GNUmakefile  RunData.cxx  RunData.h  altCMakeLists.cmake  classes.h  classes_def.xml
Utilities/: CMakeLists.txt  sparse_vector.h
Utilities/test/: sparse_vector_test.cc
cmakeConfig/: CMakeLists.txt  larcore-fragment.cmake.in
larcore/: CMakeLists.txt
larcore/CoreUtils/: EnsureOnlyOneSchedule.h  ServiceProviderWrappers.h  ServiceUtil.h  UncopiableAndUnmoveableClass.h
larcore/Geometry/: AuxDetExptGeoHelperInterface.h  AuxDetGeometry.h  AuxDetGeometry_service.cc  CMakeLists.txt  ChannelMapPixelSetupTool_tool.cc  ChannelMapSetupTool.h  ChannelMapStandardSetupTool_tool.cc  DumpChannelMap_module.cc  DumpGeometry_module.cc  ExptGeoHelperInterface.h  GeoObjectSorterSetupTool.h  GeoObjectSorterStandardSetupTool_tool.cc  Geometry.h  GeometryBuilderSquarePixelTool_tool.cc  GeometryBuilderStandardTool_tool.cc  GeometryBuilderTool.h  GeometryBuilderWirelessTool_tool.cc  GeometryCore.cxx  GeometryCore.h  Geometry_service.cc  LocalTransformation.txx  PlaneGeo.cxx  PlaneGeo.h  StandardGeometryHelper.h  StandardGeometryHelper_service.cc  TPCGeo.cxx  WireGeo.cxx  dump_lartpcdetector_geometry.fcl  geometry.fcl  geometry_lartpcdetector.fcl
larcore/Geometry/gdml/: CMakeLists.txt  argoneut.gdml  bo.gdml  generate_35t.pl  generate_35t4apa.pl  generate_APAoutside.pl  generate_ICARUS.pl  icarus.gdml  icarus_nowires.gdml  jp250L.gdml  lariat.gdml  lariat_wdisk.gdml  longbo.gdml  materials.gdml  voltpc.gdml
larcore/Geometry/gdml/GDMLSchema/: CMakeLists.txt
larcore/Geometry/gdml/bo/: bo-plane.gdml  bo-tpc.gdml  bo-world.gdml
larcore/SummaryData/: CMakeLists.txt  POTSummary.cxx  RunData.cxx  RunData.h  classes.h
test/: CMakeLists.txt  altCMakeLists.cmake
test/CoreUtils/: CMakeLists.txt  ServiceUtil_test.cc  UncopiableAndUnmoveableClass_test.cc
test/Geometry/: CMakeLists.txt  GeometryIteratorLoopTest_module.cc  GeometryIteratorTest_module.cc  GeometryTestAlg.cxx  GeometryTestAlg.h  GeometryTest_module.cc  Geometry_test.cxx  NameSelector.cxx  NameSelector_test.cxx  altCMakeLists.cmake  boost_unit_test_base.h  dump_lartpcdetector_channelmap.fcl  geometry_boost_unit_test_base.h  geometry_iterator_loop_test.cxx  geometry_iterator_test.cxx  geometry_test.cxx  geometry_thirdplaneslope_test.cxx  geometry_unit_test_base.h  test_geometry_iterators.fcl  unit_test_base.h
test/SimpleTypesAndConstants/: CMakeLists.txt  geo_types_test.cc  readout_types_test.cc  testPhysicalConstants.cc
test/SimpleTypesAndConstantsInLArCoreObj/: geo_types_test.cc
ups/: product_deps
